--- a/Courage-to-continue4.html
+++ b/Courage-to-continue4.html
@@ -30,7 +30,7 @@
     <a href="The-End5.html">  Continue to the end</a>  <br><br>
     <a href="index1.html"> Go to beginning</a>
   
-  
+   <i>Photo by</i> <a href="https://unsplash.com/@gerandeklerk?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"> Unsplash</a>
   
   
   </body>
