--- a/Enter-the-path2.html
+++ b/Enter-the-path2.html
@@ -15,7 +15,7 @@
      <img src="https://cdn.glitch.com/6d72548c-dda4-4fcf-8c03-d4f217a308fe%2Fmehmet-turgut-kirkgoz-unsplash.jpg?v=1631208823636" width="500px" length="500px" />
       <a href="continue-the-path3.html"> Continue on the path or... </a> <br><br>
       
-      <a href="index1.html">  Go back to the beginning</a>
+      <a href="index.html">  Go back to the beginning</a>
    
    </body>
     
