--- a/Courage-to-continue4.html
+++ b/Courage-to-continue4.html
@@ -28,9 +28,8 @@
   
   <img src="https://cdn.glitch.com/6d72548c-dda4-4fcf-8c03-d4f217a308fe%2Fgeran-de-klerk-unsplash.jpg?v=1631208822260" width="450px" length="450px" /> 
     <a href="The-End5.html">  Continue to the end</a>  <br><br>
-    <a href="index1.html"> Go to beginning</a>
-  
-   <i>Photo by</i> <a href="https://unsplash.com/@gerandeklerk?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"> Unsplash</a>
+    <a href="index.html"> Go to beginning</a>
+  <i>Photo by</i> <a href="https://unsplash.com/@gerandeklerk?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"> Unsplash</a>
   
   
   </body>
