--- a/The-End5.html
+++ b/The-End5.html
@@ -21,7 +21,7 @@
     
     
     <img src="https://cdn.glitch.com/6d72548c-dda4-4fcf-8c03-d4f217a308fe%2Fmaggie-collins-unsplash.jpg?v=1631208826651" width="500px" length="500px" />
-     <a href="index1.html"> Go back to home</a>
+     <a href="index.html"> Go back to home</a>
   
   </body>
 
