--- a/continue-the-path3.html
+++ b/continue-the-path3.html
@@ -23,7 +23,7 @@
     
    <img src="https://cdn.glitch.com/6d72548c-dda4-4fcf-8c03-d4f217a308fe%2Fwayne-chan-unsplash.jpg?v=1631208824753" width="500px" length="500px" />
      <a href="Courage-to-continue4.html"> Muster the courage to continue</a> <br><br>
-      <a href="index1.html"> Go back to start</a>
+      <a href="index.html"> Go back to start</a>
   
   </body>
 
